[package]
name = "rtcp"
version = "0.1.0"
edition = "2021"
default-run = "rtcp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib/lib.rs"

[dependencies]
tokio = { version = "^1.37", features = [
  "rt",
  "net",
  "macros",
  "rt-multi-thread",
  "io-util",
] }
bytes = "1.6"
nom = "7.1.3"
headers = "0.4.0"
