[package]
name = "rtcp"
version = "0.1.0"
edition = "2021"
default-run = "rtcp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib/lib.rs"

[dependencies]
tokio = { version = "^1.37", features = [
  # "rt",
  # "net",
  # "macros",
  # "rt-multi-thread",
  # "io-util",
  # "sync",
  "full"
] }
bytes = "1.6"
nom = "7.1.3"
headers = "0.4.0"
uuid = { version = "1.8.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics",
] }
deadpool = "0.11.2"
